--- a/Basics/1.2. Strings.md
+++ b/Basics/1.2. Strings.md
@@ -1,1 +1,53 @@
-
+# Strings
+- A string is a collection or sequence of characters enclosed within double-quotes. 
+```cpp
+string str= "Hello";
+```
+- To use string within your code, you must include the string library using this code line: 
+```cpp
+#include <string>
+```
+## String Concatenation*
+- To combine two strings, we use ``+`` sign.
+```cpp
+string name = "Dragon";
+string age = " is 1500 years old."
+cout << name + age;
+```
+## String Functions 
+- ``int compare(const string& str)`` - Compare two string objects
+- ``int length()`` - Finds the length of the string
+- ``void swap(string& str)`` - Swaps the values of two string objects
+- ``string substr(int pos, int n)`` - Creates a new string object of n characters
+- ``int size()`` - Return the length of the string in terms of bytes
+- ``void resize(int n)`` - Resizes the length of the string up to n characters
+- ``string& replace(int pos, int len, string& str)`` - Replaces the portion of the string beginning at character position pos and spans len characters
+- ``string& append(const string& str)`` - Adds a new character at the end of another string object
+- ``char& at(int pos)`` - Accesses an individual character at specified position pos
+- ``int find(string& str, int pos, int n)`` - Finds a string specified in the parameter
+- ``int find_first_of(string& str, int pos, int n)`` -Find the first occurrence of the specified sequence
+- ``int find_first_not_of(string& str, int pos, int n )`` - Searches for the string for the first character that does not match with any of the characters specified in the string
+- ``int find_last_of(string& str, int pos, int n)`` - Searches for the string for the last character of a specified sequence
+- ``int find_last_not_of(string& str, int pos)`` - Searches for the last character that does not match with the specified sequence
+- ``string& insert()`` - Inserts a new character before the character indicated by the position pos
+- ``int max_size()`` - Finds the maximum length of the string
+- ``void push_back(char ch)`` - Adds a new character ch at the end of the string
+- ``void pop_back()`` - Removes the last character of the string
+- ``string& assign()`` - Assigns new value to the string
+- ``int copy(string& str)`` - Copies the contents of string into another
+- ``void clear()`` - Removes all the elements from the string
+- ``const_reverse_iterator crbegin()`` - Points to the last character of the string
+- ``const_char* data()`` - Copies the characters of string into an array
+- ``bool empty()`` - Checks whether the string is empty or not
+- ``string& erase()`` - Removes the characters as specified
+- ``char& front()`` - Returns a reference of the first character
+- ``string& operator+=()`` - Appends a new character at the end of the string
+- ``string& operator=()`` - Assigns a new value to the string
+- ``char operator[](pos)`` - Retrieves a character at specified position pos
+- ``int rfind()`` - Searches for the last occurrence of the string
+- - ``iterator end()`` - Refers to the last character of the string
+- reverse_iterator rend()`` -Points to the first character of the string
+- ``void shrink_to_fit()`` - Reduces the capacity and makes it equal to the size of the string
+- ``char* c_str()`` - Returns pointer to an array containing a null terminated sequence of characters
+- ``void reserve(inr len)`` - Requests a change in capacity 
+- ``allocator_type get_allocator();`` - Returns the allocated object associated with the string
