--- a/Basics/1.2. Strings.md
+++ b/Basics/1.2. Strings.md
@@ -45,7 +45,7 @@ cout << name + age;
 - ``string& operator=()`` - Assigns a new value to the string
 - ``char operator[](pos)`` - Retrieves a character at specified position pos
 - ``int rfind()`` - Searches for the last occurrence of the string
-- - ``iterator end()`` - Refers to the last character of the string
+- ``iterator end()`` - Refers to the last character of the string
 - reverse_iterator rend()`` -Points to the first character of the string
 - ``void shrink_to_fit()`` - Reduces the capacity and makes it equal to the size of the string
 - ``char* c_str()`` - Returns pointer to an array containing a null terminated sequence of characters
