--- a/Basics/1.2. Strings.md
+++ b/Basics/1.2. Strings.md
@@ -12,7 +12,7 @@ string str= "Hello";
 ```cpp
 string name = "Dragon";
 string age = " is 1500 years old."
-cout << name + age;
+std::cout << name + age;
 ```
 ## String Functions 
 - ``int compare(const string& str)`` - Compare two string objects
