Update 1.1. Data types and Variables .md

--- a/Basics/1.1. Data types and Variables .md
+++ b/Basics/1.1. Data types and Variables .md
@@ -36,9 +36,9 @@ a = 10;
 b = 20;
 c = a + b;
 
-cout << c;
+std::cout << c;
 
-return0;
+return 0;
 }
 ```
 ### Global Variables 
@@ -59,9 +59,9 @@ a = 10;
 b = 20;
 g = a + b;
 
-cout << g;
+std::cout << g;
 
-return0;
+return 0;
 }
 ```
 
