--- a/Basics/0.1 Syntax.md
+++ b/Basics/0.1 Syntax.md
@@ -1,20 +1,18 @@
 # Syntax
 ```cpp
 #include <iostream>
-usingnamespacestd;
 
-intmain() {
-cout << "Hello World!";
-return0;
+int main() {
+std::cout << "Hello World!";
+return 0;
 }
 ```
 - end each line with a semicolon ```;``` to specify the end of the line
 - **Line 1**: ```#include <iostream>```specifies the header file library, which helps you deal with input and output objects like “cout.” Header files are used to add specific functionality to C++ programs.
-- **Line 2**: ```using namespace std``` allows you to use names for objects and variables from the standard library.
-- **Line 3**: Blank line. C++ ignores the spaces present within the code.
-- **Line 4**: ```int main()```, which is a function. Any code within the curly brackets {} will be executed.
-- **Line 5**: ```cout``` is an object used along with the insertion operator ```<<```(see out) to print the output text. 
-- **Line 6**: ```return 0``` is used to end the main function.
+- **Line 2**: Blank line. C++ ignores the spaces present within the code.
+- **Line 3**: ```int main()```, which is a function. Any code within the curly brackets {} will be executed.
+- **Line 4**: ```cout``` is an object used along with the insertion operator ```<<```(see out) to print the output text. 
+- **Line 5**: ```return 0``` is used to end the main function.
 
 - Comments in C++ can be single or multi-line and start with ```/*``` and close with ```*/```
 - Comments can also start with ```//```, extending to the lines end.
