Update 0.2 User Input and Ouput.md

--- a/Basics/0.2 User Input and Ouput.md
+++ b/Basics/0.2 User Input and Ouput.md
@@ -1,1 +1,15 @@
+# User Input and Output
+- ``std::cout`` followed by see out ``<<`` shows the Output of the Programm
+- ``std::cin`` followed by see in ``>>`` gets the User input
+```cpp
+#include <iostream>
 
+int main(){
+    int x; // declaring a variable
+    std::cout << "Type a number: "; // Type any number and hit enter
+    std::cin >> x; // Get user input from the keyboard
+    std::cout << "Your number is: " << x; // Display the value
+
+    return 0;
+}
+```
