--- a/Basics/1.1. Data types and Variables .md
+++ b/Basics/1.1. Data types and Variables .md
@@ -67,20 +67,20 @@ return 0;
 
 # Arrays
 Arrays are derived data types that store multiple data items of similar types at contiguous memory locations.
-´´´cpp
+```cpp
 string vehicles [4]; //declaring array to store up to 4 variables.
 string vehicles[4]= {"car", "scooter", "cycle", "bike"}; //initializing the array
-´´´
+```
 ## Accessing Array Values
 You need to use the index number to access the elements stored in an array. 
-´´´cpp
+```cpp
 string vehicles[4]= {"car", "scooter", "cycle", "bike"};
 cout << vehicles [0];
-´´´
+```
 ## Changing Array Elements
 You can change the elements stored in an array using the index number. 
-´´´cpp
+```cpp
 string vehicles[4]= {"car", "scooter", "cycle", "bike"};
 vehicles [0]= " "airplane";
 cout << vehicles[0];
-´´´
+```
