Update 1.1. Data types and Variables .md

--- a/Basics/1.1. Data types and Variables .md
+++ b/Basics/1.1. Data types and Variables .md
@@ -75,12 +75,12 @@ string vehicles[4]= {"car", "scooter", "cycle", "bike"}; //initializing the arra
 You need to use the index number to access the elements stored in an array. 
 ```cpp
 string vehicles[4]= {"car", "scooter", "cycle", "bike"};
-cout << vehicles [0];
+std::cout << vehicles [0];
 ```
 ## Changing Array Elements
 You can change the elements stored in an array using the index number. 
 ```cpp
 string vehicles[4]= {"car", "scooter", "cycle", "bike"};
 vehicles [0]= " "airplane";
-cout << vehicles[0];
+std::cout << vehicles[0];
 ```
