Update 1.1. Data types and Variables .md

--- a/Basics/1.1. Data types and Variables .md
+++ b/Basics/1.1. Data types and Variables .md
@@ -68,19 +68,20 @@ return 0;
 # Arrays
 Arrays are derived data types that store multiple data items of similar types at contiguous memory locations.
 ```cpp
-string vehicles [4]; //declaring array to store up to 4 variables.
-string vehicles[4]= {"car", "scooter", "cycle", "bike"}; //initializing the array
+std::string vehicles [4]; //declaring array to store up to 4 variables.
+std::string vehicles[4]= {"car", "scooter", "cycle", "bike"}; //initializing the array
 ```
 ## Accessing Array Values
 You need to use the index number to access the elements stored in an array. 
 ```cpp
-string vehicles[4]= {"car", "scooter", "cycle", "bike"};
-std::cout << vehicles [0];
+  std::string vehicles[4]= {"car", "scooter", "cycle", "bike"};
+  std::cout << vehicles [0];    // --> car   
+  return 0;
 ```
 ## Changing Array Elements
 You can change the elements stored in an array using the index number. 
 ```cpp
-string vehicles[4]= {"car", "scooter", "cycle", "bike"};
+std::string vehicles[4]= {"car", "scooter", "cycle", "bike"};
 vehicles [0]= " "airplane";
-std::cout << vehicles[0];
+std::cout << vehicles[0]; // --> airplane  
 ```
