--- a/Basics/0.1 Syntax.md
+++ b/Basics/0.1 Syntax.md
@@ -12,7 +12,18 @@ int main() {
 - **Line 2**: Blank line. C++ ignores the spaces present within the code.
 - **Line 3**: ```int main()```, which is a function. Any code within the curly brackets {} will be executed.
 - **Line 4**: ```cout``` is an object used along with the insertion operator ```<<```(see out) to print the output text. 
-- **Line 5**: ```return 0``` is used to end the main function.
+- **Line 5**: ```return 0``` is used to end the main function. If no value is returned, the system will receive a value indicating successful
+completion.
+  - A return type ```void``` indicates that a function does not return a value.
+  ```cpp
+  void print_square(double x)
+  {
+    cout << "the square of " << x << " is " << square(x) << "\n";
+  }
+  ```
 
 - Comments in C++ can be single or multi-line and start with ```/*``` and close with ```*/```
 - Comments can also start with ```//```, extending to the lines end.
+
+- ```using using namespace std;``` --> make names from std visible without std:: 
+
