--- a/Basics/4. Functions.md
+++ b/Basics/4. Functions.md
@@ -1,4 +1,5 @@
 # Defining a Function
+- Defining a function is the way you specify how an operation is to be done.
 - Syntax for defining a function in C++:
 ```
 return_type function_name( parameter list ) {
@@ -8,6 +9,8 @@ body of the function
 Where:
 
 - ``return_type`` specifies the type of value being returned by that function. 
+    - functions can also return nothing by using ``void`` type. 
+    - ``void exit(int); // int argument; return nothing`` 
 - ``function_name`` specifies the name of the function and needs to be unique. 
 - ``parameter list`` allows you to pass more than one value to your function, along with their data types. 
 - ``body of the function`` specifies the set of instructions to accomplish a task. 
