Update 1.1. Data types and Variables .md

--- a/Basics/1.1. Data types and Variables .md
+++ b/Basics/1.1. Data types and Variables .md
@@ -11,12 +11,15 @@ Variables store the data values. C++ supports various types of variables, such a
 int num = 12; // Integer (whole numbers)
 string name = "Buddy"; // String(text)
 char ch = 'U'; //single character
-float fl = 5.99; // Floating point number with decimals
-double Y_N = true // Boolean values with two states: true or false
+double fl = 5.99; // Floating point number with decimals
+bool y_n = true // Boolean values with two states: true or false
 ```
 - You can use alphabets, numbers, and the underscore for a variable name. 
 . However, variables **cannot start** with numbers or the underscore ‘_’ character. 
 - You cannot use a keyword for the variable name. 
+
+![image](https://user-images.githubusercontent.com/86968217/166429197-15a1c773-5f22-4210-b9ff-3ea4118c0b67.png)
+
 
 
 ## Variables Scope
