Update 5.1 Decision-Making Statements.md

--- a/Basics/5.1 Decision-Making Statements.md
+++ b/Basics/5.1 Decision-Making Statements.md
@@ -1,5 +1,5 @@
 # If Statement
-It instructs the compiler to execute the block of code only if the condition holds true. 
+An if statement is used to test an expression for truth. If the condition is true, then the statements within are executed. Otherwise, the statements are skipped.
 - Syntax:
 ```
 if (expression)
@@ -23,8 +23,7 @@ return 0;
 ```
 
 # If...Else Statement
-This is an extension of the ‘if’ statement. It instructs the compiler to execute the ‘if’ block only if the specified condition is true. Otherwise, it executes the ‘else’
-block. 
+This is an extension of the ‘if’ statement. It instructs the compiler to execute the ‘if’ block only if the specified condition is true. Otherwise, it executes the ‘else’ block. 
 - Syntax:
 ```
 if (expression)
@@ -51,8 +50,24 @@ std::cout << "Value of your number is : " << b << std::endl;
 return 0;
 }
 ```
+# Else if Statement
+ ``else if`` for two or more possible statements.
+```
+if (condition) 
+    {some code} 
+else if (condition)
+    {some code} 
+else 
+    {some code}
+````
+
 # Switch Statement
-When you need to execute conditions against various values, you can use switch statements.
+- When you need to execute conditions against various values, you can use switch statements.
+- The switch keyword initiates the statement and is followed by ``()``, which contains the value that each case will compare.
+- Inside the block, ``{}``, there are multiple cases. The case keyword checks if the expression matches the specified value that comes after it. 
+- The ``break`` keyword tells the computer to exit the block and not execute any more code or check any other cases inside the code block.
+- At the end of each switch statement, there is a ``default`` statement. If none of the cases are true, then the code in the default statement will run. It’s essentially the else part.
+
 - Syntax:
 ```
 switch(expression) {
