--- a/Basics/5.2 Loops.md
+++ b/Basics/5.2 Loops.md
@@ -36,11 +36,14 @@ while (condition)
 # For Loop
 You can use the for loop to execute a block of code multiple times. This loop runs the block until the condition specified in it holds false. 
 ```
-for (int a=0; i< count; i++) //i++ Add +1.
+for (int i=0; i< count; i++) //i++ Add +1.
 {
 Code
 }
 ```
+- The initialization of a counter: ``int i = 0``
+- The continue condition: ``i < 20``
+- The change in the counter (in this case an increment): ``i++``
 # Break Statement
 This is used to break the flow of the code so the remaining code isn’t executed. This brings you out of the loop. <br/>
 Example:
