--- a/Basics/0.3 Errors.md
+++ b/Basics/0.3 Errors.md
@@ -1,4 +1,4 @@
-# Error 
+# Error s
 
 - **Compile-time errors**: Errors found by the compiler.
 - **Link-time errors**: Errors found by the linker when it is trying to combine object files into an executable program.
@@ -12,6 +12,8 @@ There are two types of **compile-time errors**:
 - **Type errors**: Errors that occur when there are mismatch between the types we declared.
   - e.g. forgetting to declare a variable
   - e.g. storing a value into the wrong type
+![image](https://user-images.githubusercontent.com/86968217/166887123-47ad7ca4-70e7-4039-b5f8-98758446269a.png)
+
 
 **Link-time Errors** are ,when the program needs some function or library that it can’t find. Some common link-time errors:
 - Using a function that was never defined (more on this later)
