--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -1,5 +1,5 @@
 # Arrays
-Arrays are derived data types that store multiple data items of similar types at contiguous memory locations.
+Arrays are derived data types that store multiple data items of similar types at contiguous memory locations.(**contiguous, indexable sequence of elements**)
 ```cpp
 std::string vehicles [4]; //declaring array to store up to 4 variables.
 std::string vehicles[4]= {"car", "scooter", "cycle", "bike"}; //initializing the array
@@ -18,3 +18,10 @@ std::string vehicles[4]= {"car", "scooter", "cycle", "bike"};
 vehicles [0]= " "airplane";
 std::cout << vehicles[0]; // --> airplane  
 ```
+# Vectors
+- The ``std::vector`` lives in the ``<vector>`` header. So first, we need to add this line of code at the top of the program: ``#include <vector>``
+- And the syntax to create a vector looks like ``std::vector<type> name;``
+- So to define a vector of ``int``s called ``calories_today``:
+``cpp
+std::vector<int> calories_today;
+``
