Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -21,7 +21,15 @@ std::cout << vehicles[0]; // --> airplane
 # Vectors
 - The ``std::vector`` lives in the ``<vector>`` header. So first, we need to add this line of code at the top of the program: ``#include <vector>``
 - And the syntax to create a vector looks like ``std::vector<type> name;``
-- So to define a vector of ``int``s called ``calories_today``:
+- So to define a vector of ``int``s called ``calories_today``: <br/>
 ``cpp
 std::vector<int> calories_today;
+``
+- We can create *and* initialize the vectors``location`` with specific values:
+``cpp
+std::vector<double> location = {42.651443, -73.749302};
+``
+- Another way we can initialize our vector is by *presizing*, or setting the size. Suppose we want to create and initialize a vector with two elements. However, we don’t know what values we want to add yet:
+``cpp
+std::vector<double> location(2);
 ``
