--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -25,11 +25,34 @@ std::cout << vehicles[0]; // --> airplane
 ``cpp
 std::vector<int> calories_today;
 ``
-- We can create *and* initialize the vectors``location`` with specific values:
+- We can create *and* initialize the vectors``location`` with specific values:<br/>
 ``cpp
 std::vector<double> location = {42.651443, -73.749302};
 ``
-- Another way we can initialize our vector is by *presizing*, or setting the size. Suppose we want to create and initialize a vector with two elements. However, we don’t know what values we want to add yet:
+- Another way we can initialize our vector is by *presizing*, or setting the size. Suppose we want to create and initialize a vector with two elements. However, we don’t know what values we want to add yet:<br/>
 ``cpp
 std::vector<double> location(2);
 ``
+## Indexing vectors
+- An **index** refers to an element’s position within an ordered list. Vectors are 0-indexed, meaning the first element has index 0, the second index 1, and so on.
+- Using the notation ``vector[index]`` with square brackets after the vector name and the element’s index number inside.
+``cp
+std::vector<char> vowels = {'a', 'e', 'i', 'o', 'u'};
+std::cout << vowels[1] << "\n"; // Will give the letter e
+``
+
+## Adding and Removing Elements
+- To **add** a new element to the “back”, or end of the vector, we can use the ``.push_back()`` function.
+``cpp
+std::vector<std::string> dna = {"ATG", "ACG"};
+dna.push_back("GTG");
+dna.push_back("CTG");
+``
+![image](https://user-images.githubusercontent.com/86968217/166891130-f30e3e3f-4a6f-45b9-9998-b9dd5f8d94ba.png)
+
+- You can also **remove** elements from the “back” of the vector using **.pop_back()**.
+``cpp
+std::vector<std::string> dna = {"ATG", "ACG","GTG","CTG"};
+dna.pop_back();
+``
+![image](https://user-images.githubusercontent.com/86968217/166891393-47c71c4c-416d-414a-a54c-a784cb11e821.png)
