Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -35,24 +35,24 @@ std::vector<double> location(2);
 ``
 ## Indexing vectors
 - An **index** refers to an element’s position within an ordered list. Vectors are 0-indexed, meaning the first element has index 0, the second index 1, and so on.
-- Using the notation ``vector[index]`` with square brackets after the vector name and the element’s index number inside.
+- Using the notation ``vector[index]`` with square brackets after the vector name and the element’s index number inside.<br/>
 ``cp
 std::vector<char> vowels = {'a', 'e', 'i', 'o', 'u'};
 std::cout << vowels[1] << "\n"; // Will give the letter e
 ``
 
 ## Adding and Removing Elements
-- To **add** a new element to the “back”, or end of the vector, we can use the ``.push_back()`` function.
+- To **add** a new element to the “back”, or end of the vector, we can use the ``.push_back()`` function.<br/>
 ``cpp
 std::vector<std::string> dna = {"ATG", "ACG"};
 dna.push_back("GTG");
 dna.push_back("CTG");
-``
+``<br/>
 ![image](https://user-images.githubusercontent.com/86968217/166891130-f30e3e3f-4a6f-45b9-9998-b9dd5f8d94ba.png)
 
-- You can also **remove** elements from the “back” of the vector using **.pop_back()**.
+- You can also **remove** elements from the “back” of the vector using **.pop_back()**.<br/>
 ``cpp
 std::vector<std::string> dna = {"ATG", "ACG","GTG","CTG"};
 dna.pop_back();
-``
+``<br/>
 ![image](https://user-images.githubusercontent.com/86968217/166891393-47c71c4c-416d-414a-a54c-a784cb11e821.png)
