Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -36,7 +36,7 @@ std::vector<double> location(2);
 ## Indexing vectors
 - An **index** refers to an element’s position within an ordered list. Vectors are 0-indexed, meaning the first element has index 0, the second index 1, and so on.
 - Using the notation ``vector[index]`` with square brackets after the vector name and the element’s index number inside.<br/>
-``cp
+``cpp
 std::vector<char> vowels = {'a', 'e', 'i', 'o', 'u'};
 std::cout << vowels[1] << "\n"; // Will give the letter e
 ``
