Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -56,3 +56,20 @@ std::vector<std::string> dna = {"ATG", "ACG","GTG","CTG"};
 dna.pop_back();
 ``<br/>
 ![image](https://user-images.githubusercontent.com/86968217/166891393-47c71c4c-416d-414a-a54c-a784cb11e821.png)
+
+## Size of Vector
+The ``.size()`` function returns the number of elements in the vector.<br/>
+``cpp
+  std::vector<std::string> grocery = {"Hot Pepper Jam", "Dragon Fruit", "Brussel Sprouts"};
+  std::cout << grocery.size();  //prints the size of the vector grocery
+``
+
+## Overwriting vector with for loop
+You can write a ``for loop`` that iterates from ``0`` to ``vector.size()``. You can use the counter of the for loop as the index.<br/>
+``cp
+for (int i = 0; i < vector.size(); i++) {
+ 
+  vector[i] = vector[i] + 10;
+ 
+}
+``
