Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -64,12 +64,11 @@ The ``.size()`` function returns the number of elements in the vector.<br/>
   std::cout << grocery.size();  //prints the size of the vector grocery
 ``
 
-## Overwriting vector with for loop
+### Iterating over vector soze with for loop
 You can write a ``for loop`` that iterates from ``0`` to ``vector.size()``. You can use the counter of the for loop as the index.<br/>
-``cp
+``cpp
 for (int i = 0; i < vector.size(); i++) {
  
-  vector[i] = vector[i] + 10;
- 
-}
+  vector[i] = vector[i] + 10; // Changes every vector index by 10
+
 ``
