Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -36,39 +36,38 @@ std::vector<double> location(2);
 ## Indexing vectors
 - An **index** refers to an element’s position within an ordered list. Vectors are 0-indexed, meaning the first element has index 0, the second index 1, and so on.
 - Using the notation ``vector[index]`` with square brackets after the vector name and the element’s index number inside.<br/>
-``cpp
+```cpp
 std::vector<char> vowels = {'a', 'e', 'i', 'o', 'u'};
 std::cout << vowels[1] << "\n"; // Will give the letter e
-``
+```
 
 ## Adding and Removing Elements
 - To **add** a new element to the “back”, or end of the vector, we can use the ``.push_back()`` function.<br/>
-``cpp
+```cpp
 std::vector<std::string> dna = {"ATG", "ACG"};
 dna.push_back("GTG");
 dna.push_back("CTG");
-``<br/>
+```br/>
 ![image](https://user-images.githubusercontent.com/86968217/166891130-f30e3e3f-4a6f-45b9-9998-b9dd5f8d94ba.png)
 
 - You can also **remove** elements from the “back” of the vector using **.pop_back()**.<br/>
-``cpp
+```cpp
 std::vector<std::string> dna = {"ATG", "ACG","GTG","CTG"};
 dna.pop_back();
-``<br/>
+```br/>
 ![image](https://user-images.githubusercontent.com/86968217/166891393-47c71c4c-416d-414a-a54c-a784cb11e821.png)
 
 ## Size of Vector
 The ``.size()`` function returns the number of elements in the vector.<br/>
-``cpp
+```cpp
   std::vector<std::string> grocery = {"Hot Pepper Jam", "Dragon Fruit", "Brussel Sprouts"};
   std::cout << grocery.size();  //prints the size of the vector grocery
-``
+```
 
-### Iterating over vector soze with for loop
+### Iterating over vector size with for loop
 You can write a ``for loop`` that iterates from ``0`` to ``vector.size()``. You can use the counter of the for loop as the index.<br/>
-``cpp
+```cpp
 for (int i = 0; i < vector.size(); i++) {
- 
   vector[i] = vector[i] + 10; // Changes every vector index by 10
-
-``
+  }
+```
