--- a/Basics/4. Functions.md
+++ b/Basics/4. Functions.md
@@ -12,7 +12,7 @@ Where:
     - functions can also return nothing by using ``void`` type. 
     - ``void exit(int); // int argument; return nothing`` 
 - ``function_name`` specifies the name of the function and needs to be unique. 
-- ``parameter list`` allows you to pass more than one value to your function, along with their data types. 
+- ``parameter list`` allows you to pass more than one value to your function, along with their data types. (e.g. ``int number``)
 - ``body of the function`` specifies the set of instructions to accomplish a task. 
 
 For example:
@@ -29,7 +29,6 @@ int max(int num1, int num2) { // declaring the function max with parameters num1
     
     return result;
 }
-
 ```
 
 # Calling a function
