Update 1.3 Arrays and Vectors.md

--- a/Basics/1.3 Arrays and Vectors.md
+++ b/Basics/1.3 Arrays and Vectors.md
@@ -64,10 +64,24 @@ The ``.size()`` function returns the number of elements in the vector.<br/>
   std::cout << grocery.size();  //prints the size of the vector grocery
 ```
 
-### Iterating over vector size with for loop
+### Iterating over vector with for loop
 You can write a ``for loop`` that iterates from ``0`` to ``vector.size()``. You can use the counter of the for loop as the index.<br/>
 ```cpp
 for (int i = 0; i < vector.size(); i++) {
   vector[i] = vector[i] + 10; // Changes every vector index by 10
   }
+```
+OR:
+```cpp
+#include <iostream>
+#include <vector>
+
+int main() {
+    
+     std::vector<int> vector = {1, 5, 8};
+     for (int elements : vector){
+         std::cout << elements << "\n";
+     }
+    return 0;
+}
 ```
